[tool.poetry]
name = "bagallahvevo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyNaCl = "^1.4.0"
youtube_dl = "^2021.6.6"
python-dotenv = "^0.19.2"
autopep8 = "^1.6.0"
"discord.py" = "^1.7.3"
discord = "^1.7.3"
lavalink = "^3.1.4"
wavelink = "^0.9.10"
yt-dlp = "^2021.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
